--- a/manifest.json
+++ b/manifest.json
@@ -13,10 +13,7 @@
     "activeTab",
     "https://*/"
   ],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
+  "background": { "scripts": ["jquery.js","background.js"] },
   "browser_action": {
     "default_icon": "SimpleAnalytic.png",
     "default_popup": "popup.html"
